<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/onlight_01"
    tools:context=".view.LiveEventSummaryActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivClose"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_margin="12dp"
        android:padding="4dp"
        android:src="@drawable/icon_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clProfile"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/ivClose">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvLiveThumbnail"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/onlight_04"
            app:cardCornerRadius="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivLiveThumbnail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerInside" />

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSummaryTitle"
            style="@style/Text18OnDark01Bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/banner_message_live_event_ended"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clProfile" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/clProfile">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:background="@color/ondark_04" />

        <LinearLayout
            android:id="@+id/llTotalParticipants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/SendbirdBody2OnDark02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/summary_total_participants" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLiveEventSummaryTotalParticipants"
                style="@style/SendbirdBody3OnDark01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/ondark_04" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/SendbirdBody2OnDark02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/summary_peak_concurrent_participants" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLiveEventSummaryPeakParticipant"
                style="@style/SendbirdBody3OnDark01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/ondark_04" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/SendbirdBody2OnDark02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/summary_duration" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLiveEventSummaryDuration"
                style="@style/SendbirdBody3OnDark01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/ondark_04" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>