<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_600"
    android:orientation="vertical"
    tools:context=".view.LiveEventDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_500"
        android:paddingStart="24dp"
        android:paddingTop="18dp"
        android:paddingEnd="12dp"
        android:paddingBottom="18dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBack"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/selector_dark"
            android:padding="4dp"
            android:src="@drawable/icon_arrow_left"
            android:tint="@color/primary_200"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Text18OnDark01Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/live_event_information"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivBack"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider"
        app:layout_constraintTop_toBottomOf="@+id/clToolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/background_300"
                app:cardCornerRadius="40dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivLiveEventDetailCover"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:scaleType="centerCrop"/>
            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLiveEventDetailTitle"
                style="@style/Text18OnDark01Bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center_horizontal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="23dp"
                android:background="@color/ondark_04" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clLiveEventDetailHost"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/selector_dark">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivLiveEventDetailHost"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/icon_operator"
                    android:tint="@color/primary_200"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivLiveEventDetailHostRightArrow"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/icon_chevron_right"
                    android:tint="@color/ondark_01"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/ivLiveEventDetailHostTitle"
                    style="@style/Text16OnDark01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/hosts"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/ivLiveEventDetailHost"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvLiveEventDetailHostCount"
                    style="@style/Text16OnDark02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/ivLiveEventDetailHostRightArrow"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/ondark_04" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clLiveEventDetailParticipant"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/selector_dark">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivLiveEventDetailParticipant"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/icon_members"
                    android:tint="@color/primary_200"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivLiveEventDetailParticipantRightArrow"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/icon_chevron_right"
                    android:tint="@color/ondark_01"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/ivLiveEventDetailParticipantTitle"
                    style="@style/Text16OnDark01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/participants"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/ivLiveEventDetailParticipant"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvLiveEventDetailParticipantCount"
                    style="@style/Text16OnDark02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/ivLiveEventDetailParticipantRightArrow"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/ondark_04" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clLiveEventDetailFreezeChannel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="16dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivLiveEventDetailFreezeChannelIcon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/icon_freeze"
                    android:tint="@color/primary_200"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switchLiveEventDetailFreezeChannel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    app:layout_constraintBottom_toBottomOf="@id/ivLiveEventDetailFreezeChannelIcon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/ivLiveEventDetailFreezeChannelIcon"
                    app:thumbTint="@color/switch_thumb_dark"
                    app:trackTint="@color/switch_track_dark" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/Text16OnDark01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/freeze_chat"
                    app:layout_constraintBottom_toBottomOf="@id/ivLiveEventDetailFreezeChannelIcon"
                    app:layout_constraintStart_toEndOf="@id/ivLiveEventDetailFreezeChannelIcon"
                    app:layout_constraintTop_toTopOf="@id/ivLiveEventDetailFreezeChannelIcon" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/Text14OnDark02"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/freeze_channel_description"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ivLiveEventDetailFreezeChannelIcon" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/ondark_04" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="16dp"
                android:paddingBottom="16dp">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/Text14OnDark02"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/live_event_id" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvLiveEventDetailLiveEventId"
                    style="@style/Text14OnDark01"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/ondark_04" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="16dp"
                android:paddingBottom="16dp">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/Text14OnDark02"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/created_on" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvLiveEventDetailCreatedAt"
                    style="@style/Text14OnDark01"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/ondark_04" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="16dp"
                android:paddingBottom="16dp">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/Text14OnDark02"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/created_by" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvLiveEventDetailCreatedBy"
                    style="@style/Text14OnDark01"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/ondark_04" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="16dp"
                android:paddingBottom="16dp">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/Text14OnDark02"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/started_on" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvLiveEventDetailStartedAt"
                    style="@style/Text14OnDark01"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/ondark_04" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="16dp"
                android:paddingBottom="16dp">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/Text14OnDark02"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/started_on" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvLiveEventDetailStartedBy"
                    style="@style/Text14OnDark01"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/ondark_04" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
</LinearLayout>
